Modify CSS and HTML to fix overlap of footer Remove superfluous HTML comments

--- a/src/front/src/components/PageLayout/PageLayout.css
+++ b/src/front/src/components/PageLayout/PageLayout.css
@@ -10,7 +10,6 @@
 
 .Page .Content {
     flex-grow: 2;
-    height: 100%;
     margin-top: 35px;
 }
 
